Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 <a id="questions" class="anchor" href="#questions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Questions</h1>
 
 <ol>
-<li>Create a webpage in Riak in a bucket called test with a key called data210. Set the MIME type to text/html and set the content to a webpage that says Welcome to DATA 210. I love Riak. Once this is done, go to your browser and navigate to http://localhost:8098/test/data210. What do you see?</li>
+<li><p>Create a webpage in Riak in a bucket called test with a key called data210. Set the MIME type to text/html and set the content to a webpage that says Welcome to DATA 210. I love Riak. Once this is done, go to your browser and navigate to http://localhost:8098/test/data210. What do you see?</p></li>
+<li><p>Now create a bucket that contains information about the Anderson family doggies. Use the example we went over in class to store each dog by their name in the same bucket. There are three dogs named Layla, Armani, and Orion. They are a "rhodesian ridgeback", "catahoula", and a "great dane/shepherd mix", respectively. Use JSON to store the type of dog and the age which is Layla is 3 years, Armani is 2 years, and Orion is 6 years old. Once you store them, make sure you can GET the value of each key you created.</p></li>
+<li><p>Now create a new key/value relationship called cage 1, and assign Layla to that cage using a link.</p></li>
+<li><p>Now go into your browser and GET the information for Orion.</p></li>
+<li>
 </ol>
       </section>
       <footer>
