Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
 
 <ol>
-<li>wget <a href="https://packagecloud.io/basho/riak/packages/ubuntu/trusty/riak_2.1.1-1_amd64.deb/download">https://packagecloud.io/basho/riak/packages/ubuntu/trusty/riak_2.1.1-1_amd64.deb/download</a> -o riak_2.1.1-1_amd64.deb</li>
+<li>wget <a href="https://packagecloud.io/basho/riak/packages/ubuntu/trusty/riak_2.1.1-1_amd64.deb/download">https://packagecloud.io/basho/riak/packages/ubuntu/trusty/riak_2.1.1-1_amd64.deb/download</a> -O riak_2.1.1-1_amd64.deb</li>
 <li>sudo apt-get update</li>
 <li>sudo dpkg -i riak_2.1.1-1_amd64.deb</li>
 </ol>
